Adding header/footer

--- a/quickstart2/themes/ananke/layouts/partials/site-header.html
+++ b/quickstart2/themes/ananke/layouts/partials/site-header.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="preload" href="css/main.css" as="style" onload="this.rel='stylesheet'">
+    <title>{{ .Title }}</title>
+</head>
+<body>
 {{ $featured_image := .Param "featured_image" | default "images/gohugo-default-sample-hero-image.jpg" }}
 {{ if $featured_image }}
   {{/* Trimming the slash and adding absURL make sure the image works no matter where our site lives */}}
