--- a/quickstart2/themes/ananke/layouts/_default/list.html
+++ b/quickstart2/themes/ananke/layouts/_default/list.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<body>
+  {{ range .Data.Pages }}
+    <h1><a href={{ .Permalink }}>{{ .Title }}</a></h1>
+  {{ end }}
+</body>
+</html>
 {{ define "main" }}
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
   <main class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
