--- a/quickstart2/themes/ananke/layouts/_default/single.html
+++ b/quickstart2/themes/ananke/layouts/_default/single.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>{{ .Title }}</title>
+</head>
+<body>
+<h1>{{ .Title }}</h1>
+<h2>{{ .Date.Format "Sun, Feb 11, 2018" }}</h2>
+{{ .Content }}
+</body>
+</html>
+
 {{ define "header" }}
    {{/* We can override any block in the baseof file be defining it in the template */}}
   {{ partial "page-header.html" . }}
